# gono-protocol-website

./: .gitignore  GonoProtocol_whitepaper.txt  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/architecture/: page.tsx
frontend/app/archive/: page.tsx
frontend/app/careers/: page.tsx
frontend/app/coming-soon/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/roadmap/: page.tsx  roadmap.css
frontend/app/staking/: page.tsx
frontend/app/tools/proofsnap/: page.tsx
frontend/app/tools/trustlens/: page.tsx
frontend/app/tools/verify-engine/: page.tsx
frontend/app/use-cases/: journalism_backup.tsx  page.tsx
frontend/app/use-cases/academic-credentials/: page.tsx
frontend/app/use-cases/creator-monetization/: page.tsx
frontend/app/use-cases/deepfake-protection/: page.tsx
frontend/app/use-cases/depin-computing/: page.tsx
frontend/app/use-cases/intellectual-property/: page.tsx
frontend/app/use-cases/journalism/: page.tsx
frontend/app/use-cases/news-verification/: page.tsx
frontend/app/whitepaper/: page.tsx
frontend/components/: Architecture.tsx  Archive.tsx  CTA.tsx  Ecosystem.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HomeBackground.tsx  HowItWorks.tsx  Loader.css  Loader.tsx  Navbar.tsx  Partners.tsx  Products.tsx  Reveal.tsx  Roadmap.tsx  Skeleton.tsx  SmoothScroll.tsx  UseCases.tsx  X402Micropayment.tsx  index.ts
frontend/lib/: api.ts  networkBackground.ts
(+3 files in other folders)
