[package]
name = "numbers_backend"
version = "0.1.0"
edition = "2021"
description = "Numbers Protocol Backend API"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
